Some fixes, create activity for AdditionalWay

--- a/app/src/main/res/layout/activity_edit_today_data_modal.xml
+++ b/app/src/main/res/layout/activity_edit_today_data_modal.xml
@@ -14,30 +14,41 @@
         android:id="@+id/x_close1"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="20dp"
         android:layout_gravity="end"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@android:color/transparent"
         android:scaleType="fitCenter"
-        android:src="@drawable/close"
-        android:background="@android:color/transparent"/>
+        android:src="@drawable/close" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/doYouWantToEditTodayData"
-        android:textSize="20sp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
+        android:paddingHorizontal="10dp"
         android:gravity="center_horizontal"
-        android:layout_gravity="center_horizontal"/>
+        android:text="@string/doYouWantToEditTodayData"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/buttonEditDataToday"
         android:layout_width="match_parent"
         android:layout_height="54dp"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
         android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="30dp"
         android:text="@string/editDataToday"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/buttonAddNewWay"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="30dp"
+        android:text="@string/addNewWay"
         android:textSize="20sp" />
 
     <Button
@@ -45,8 +56,8 @@
         android:layout_width="match_parent"
         android:layout_height="54dp"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
         android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"
         android:text="@string/cancelEditing"
         android:textSize="20sp" />
