--- a/app/src/main/res/layout/activity_first_add_constants.xml
+++ b/app/src/main/res/layout/activity_first_add_constants.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:id="@+id/main"
-    android:layout_height="match_parent"
-
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
+    android:layout_width="match_parent"
+
+    android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:orientation="vertical"
     android:background="@drawable/rounded_modal"
+    android:orientation="vertical"
     tools:context=".EditConstActivityModal">
 
     <LinearLayout
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="50dp"
-        android:background="@drawable/rounded_frame">
+        android:background="@drawable/rounded_frame"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/Greeting"
-            android:textSize="16sp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="20dp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="@string/Greeting"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
@@ -34,68 +34,68 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="@string/costPerPoint"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="50dp"
-        android:layout_marginHorizontal="20dp"/>
+        android:text="@string/costPerPoint"
+        android:textSize="20sp" />
 
 
     <EditText
         android:id="@+id/costPerPointConst1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:digits="0123456789"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="20dp"/>
+        android:digits="0123456789"
+        android:inputType="number" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="@string/departureFee"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="20dp"/>
+        android:text="@string/departureFee"
+        android:textSize="20sp" />
 
 
     <EditText
         android:id="@+id/departureFeeConst1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:digits="0123456789"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="20dp"/>
+        android:digits="0123456789"
+        android:inputType="number" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="@string/pricePerTon"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="20dp"/>
+        android:text="@string/pricePerTon"
+        android:textSize="20sp" />
 
 
     <EditText
         android:id="@+id/pricePerTon1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:digits=".0123456789"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="20dp"/>
+        android:digits=".0123456789"
+        android:inputType="number" />
 
     <Button
         android:id="@+id/buttonSaveConst1"
         android:layout_width="match_parent"
         android:layout_height="54dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="20sp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="30dp"
         android:enabled="false"
         android:text="@string/buttonSaveConst"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="40dp"/>
+        android:textSize="20sp" />
 
 
 </LinearLayout>
