--- a/app/src/main/res/layout/activity_editconst_modal.xml
+++ b/app/src/main/res/layout/activity_editconst_modal.xml
@@ -1,41 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginVertical="100dp"
-    android:layout_marginHorizontal="30dp"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="center"
-    android:orientation="vertical"
+    android:layout_marginHorizontal="30dp"
+    android:layout_marginVertical="100dp"
     android:background="@drawable/rounded_modal"
+    android:orientation="vertical"
     tools:context=".EditConstActivityModal">
-
-
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:paddingHorizontal="20dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingHorizontal="20dp">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginStart="50dp"
+            android:layout_weight="1"
             android:text="@string/modalTitle"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
 
         <ImageButton
             android:id="@+id/x_close"
             android:layout_width="25dp"
             android:layout_height="25dp"
+            android:background="@android:color/transparent"
             android:scaleType="fitCenter"
-            android:src="@drawable/close"
-            android:background="@android:color/transparent"/>
+            android:src="@drawable/close" />
 
 
     </LinearLayout>
@@ -44,68 +41,68 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="@string/costPerPoint"
+        android:layout_marginHorizontal="15dp"
         android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="15dp"/>
+        android:text="@string/costPerPoint"
+        android:textSize="20sp" />
 
 
     <EditText
         android:id="@+id/costPerPointConst"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:digits="0123456789"
+        android:layout_marginHorizontal="15dp"
         android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="15dp"/>
+        android:digits="0123456789"
+        android:inputType="number" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="@string/departureFee"
+        android:layout_marginHorizontal="15dp"
         android:layout_marginTop="15dp"
-        android:layout_marginHorizontal="15dp"/>
+        android:text="@string/departureFee"
+        android:textSize="20sp" />
 
 
     <EditText
         android:id="@+id/departureFeeConst"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:digits="0123456789"
+        android:layout_marginHorizontal="15dp"
         android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="15dp"/>
+        android:digits="0123456789"
+        android:inputType="number" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="@string/pricePerTon"
+        android:layout_marginHorizontal="15dp"
         android:layout_marginTop="15dp"
-        android:layout_marginHorizontal="15dp"/>
+        android:text="@string/pricePerTon"
+        android:textSize="20sp" />
 
 
     <EditText
         android:id="@+id/pricePerTon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:digits=".0123456789"
+        android:layout_marginHorizontal="15dp"
         android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="15dp"/>
+        android:digits=".0123456789"
+        android:inputType="number" />
 
     <Button
         android:id="@+id/buttonSaveConst"
         android:layout_width="match_parent"
         android:layout_height="54dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="20sp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="20dp"
         android:enabled="false"
         android:text="@string/buttonSaveConst"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="40dp"/>
+        android:textSize="20sp" />
 
 
 </LinearLayout>
