--- a/app/src/main/res/layout/activity_get_data_for_day.xml
+++ b/app/src/main/res/layout/activity_get_data_for_day.xml
@@ -55,8 +55,8 @@
         android:id="@+id/getDataForDayResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="50dp"
         android:orientation="vertical"
         android:paddingBottom="10dp"
         android:visibility="invisible"
@@ -156,12 +156,12 @@
         android:id="@+id/buttonChangeDataForDay"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:text="@string/changeDataForDate"
-        android:layout_marginTop="120dp"
         android:layout_gravity="center"
-        android:enabled="false"
         android:layout_marginHorizontal="20dp"
-        android:textSize="20sp"
-        android:textColor="@color/text"/>
+        android:layout_marginTop="120dp"
+        android:enabled="false"
+        android:text="@string/changeDataForDate"
+        android:textColor="@color/text"
+        android:textSize="20sp" />
 
 </LinearLayout>
